@@ -459,42 +459,3 @@ piecewise.layout <- function(graph, layout=layout.kamada.kawai, ...) {
   l[ unlist(sapply(gl, get.vertex.attribute, "id")), ] <- l[]
   l
 }
-
-## Replaces vertex `v` in layout `L` with layout `Lprime`.
-## layouts are matrices three columnts: vid,  x,  y
-expand.layout <- function(L, Lprime, v, pad=.2){
-    ## if Lprime is just one point,  don't bother:
-    if(length(Lprime)==1) return(L)
-
-    ## deal with 1-row matrices
-    if(!is.matrix(L) & length(L)==3) L <- matrix(L, nrow=1)
-    if(!is.matrix(Lprime) & length(Lprime)==3) Lprime <- matrix(Lprime, nrow=1)
-
-    L[, 2] <- L[, 2]-L[which(L[, 1]==v), 2]
-    L[, 3] <- L[, 3]-L[which(L[, 1]==v), 3]
-    rMax <- max(dist(Lprime[, -1]))/2
-    rMean <- mean(dist(Lprime[, -1]))*pad
-    rat <- L[, 2]/L[, 3]
-    b <- (rMax+rMean)/sqrt(1+rat^2)
-    a <- abs(rat*b)
-    
-    ## add or subtract,  depending on the xy
-    xpos <- L[, 2]>=0
-    ypos <- L[, 3]>=0
-    L[!xpos, 2] <- L[!xpos, 2]-a[!xpos]
-    L[ xpos, 2] <- L[ xpos, 2]+a[ xpos]
-    L[!ypos, 3] <- L[!ypos, 3]-b[!ypos]
-    L[ ypos, 3] <- L[ ypos, 3]+b[ ypos]
-    
-    ## center Lprime:
-    Lprime[, 2] <- Lprime[, 2]-mean(Lprime[, 2])
-    Lprime[, 3] <- Lprime[, 3]-mean(Lprime[, 3])
-
-    ## deal with 1-row matrices (again)
-    if(!is.matrix(L) & length(L)==3) L <- matrix(L, nrow=1)
-    if(!is.matrix(Lprime) & length(Lprime)==3) Lprime <- matrix(Lprime, nrow=1)
-    
-    L <- rbind(L[L[, 1]!=v, ], Lprime)
-    L <- L[order(L[, 1]), ]
-    return(L)
-}
